# sensor-eink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  partitions_c5.csv  sdkconfig  sdkconfig.old  sdkconfig_c5  sdkconfig_s3_rainmaker
Documentation/: C5_fulldeepsleep_1.0.md  sdkconfig_s3
components/big-fonts/ada/: knockout.h
components/big-fonts/epdiy/: Ubuntu_B74pt8b.h  Ubuntu_M76pt8b.h
components/big-fonts/fast/: Roboto_Black_80.h  img_rainmaker.h  ubuntu12.h  ubuntu20.h  ubuntu30.h  ubuntu40.h  ubuntu80.h  ubuntu_L_30.h
components/big-fonts/fast/ico/: alert.h  arrow_down.h  arrow_neutral.h  arrow_up.h  confidence_chart.h  ico-temp.h  ico_co2.h  ico_hum.h  ico_temp.h
components/big-fonts/logo/: fasani.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
main/: CMakeLists.txt  config.h  idf_component.yml
main/CO2-read/: C5-OTA-fast-1.4.cpp  S3-OTA-fast-1.4.cpp  S3-RTC-fast-1.4.cpp  STA-OTA-fast-1.4.cpp  STA-RTC-fast-1.3.cpp  STA-RTC-fast-1.4.cpp  STA-RTC-fast-1.5.cpp  led_controller.c  led_controller.h
main/historic/: S3-fast1.2.cpp  onlyRTC.cpp  onlySCD40.cpp  test_scd40.cpp
main/json-dl/: test1.cpp
main/recalibrate/: sensoria_recalibrate.cpp  sensoria_recalibrate_sensirion.cpp
main/tools/: i2cscan.c  test_bb_rtc.cpp  test_bq27426.cpp
sensoria_recalibrate/: sensoria_recalibrate.ino
